Add 'main' content.

--- a/css/style-min.css
+++ b/css/style-min.css
@@ -1,1 +1,1 @@
-*{box-sizing:border-box}header nav{border:1px solid red;display:flex;justify-content:space-between;width:100%;height:64px}header nav ul{display:flex;align-items:center}header nav ul li{display:inline-block;border:1px solid red}header nav ul.mobile{display:none}
+*{box-sizing:border-box}header nav{display:flex;justify-content:space-between;width:100%;height:64px}header nav ul{display:flex;align-items:center}header nav ul li{display:inline-block}header nav ul.mobile{display:none}
