--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,37 @@
+/* Universal Styles */
 * {
   box-sizing: border-box;
+
 }
-/* Universal Styles */
+a, h1, h2, h3, h4, h5, h5, p {
+  font-family: 'Source Sans Pro', sans-serif;
+  color: #4a4a4a;
+}
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+  color: #18547A;
+}
+
+h1 {
+
+}
+
+h2 {
+
+}
+
+h3 {
+
+}
+
+h4 {
+
+}
+
 .maj-cont {
 
 }
@@ -15,25 +45,35 @@
 }
 
 .info-block {
-  
-}
-/* Navigation */
-header nav {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-  height: 64px;
+
 }
 
-header nav ul {
+/* Navigation */
+header {
+  padding: 0 8px 0 24px;
+  height: 64px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+header .logo {
+  height: 32px;
   display: flex;
   align-items: center;
 }
 
-header nav ul li {
-  display: inline-block;
+header .logo a {
+  font-size: 26px;
+  font-weight: bold;
 }
 
-header nav ul.mobile {
-  display: none;
+header .logo a span {
+  font-weight: normal;
+}
+
+header ul li {
+  display: inline-block;
+  margin-right: 16px;
+  font-size: 20px;
 }
