Header and Main mobile styling.

--- a/css/style.css
+++ b/css/style.css
@@ -69,12 +69,8 @@ p {
 
 }
 
-.info-block {
 
-}
-
-
-/* Universal Styles - Media Queries */
+/* Universal Media Queries */
 @media screen and (max-width: 1000px) {
   h1 {
     font-size: 38px;
@@ -129,6 +125,45 @@ header ul li {
   font-size: 20px;
 }
 
+@media  screen and (max-width: 670px) {
+    header  {
+      padding: 0 0 0 8px;
+      height: 56px;
+    }
+    header .logo {
+      margin-right: 8px;
+      margin-bottom: 8px;
+    }
+    header .logo a {
+      font-size: 20px;
+      font-weight: bold;
+  }
+    header ul li {
+      font-size: 16px;
+      margin-bottom: 8px;
+  }
+}
+
+
+@media  screen and (max-width: 535px) {
+  .mob {
+    display: initial;
+  }
+
+  header .desktop {
+    display: none;
+  }
+
+ header nav {
+    width: 100%;
+  }
+  header nav.mob {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+  }
+}
+
 
 /* Main Section */
 main {
@@ -154,6 +189,25 @@ main .headline a.button  {
   margin-top: 36px;
 }
 
+@media  screen and (max-width: 535px) {
+  main {
+    padding: 0;
+    display: block;
+  }
+
+  main img {
+    width: 100%;
+  }
+
+  main .headline {
+    padding: 32px 16px;
+  }
+
+  main .headline a.button {
+    padding: 16px;
+    font-size: 18px;
+  }
+}
 
 /* Campus Section */
 .campus {
@@ -229,6 +283,12 @@ main .headline a.button  {
   text-decoration: underline;
 }
 
+/*@media  screen and (max-width: 770px) {
+.campus .left img {
+    min-width: 330px;
+  }
+}
+*/
 
 /* Majors Section */
 .majors {
